c2rust-transpile/tests/snapshots/snapshots__transpile@counted_by.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/counted_by.rs
input_file: c2rust-transpile/tests/snapshots/counted_by.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    path_statements,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut,
    unused_unsafe,
    unused_variables
)]
use core::ffi;
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed {
    pub length: ffi::c_int,
    pub data: [ffi::c_uchar; 0],
}
#[unsafe(no_mangle)]
pub static mut eed_4: C2RustUnnamed = C2RustUnnamed {
    length: 0,
    data: [],
};
