c2rust-transpile/tests/snapshots/snapshots__transpile@static_assert.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/static_assert.rs
input_file: c2rust-transpile/tests/snapshots/static_assert.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    path_statements,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut,
    unused_unsafe,
    unused_variables
)]
use core::ffi;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn static_assert() {}
